fixing the full template overflow problem

--- a/impressionist/style.css
+++ b/impressionist/style.css
@@ -1,3 +1,10 @@
+/* global codes for this template start */
+body{
+    overflow-x:hidden;
+}
+/* global codes for this template end */
+
+
 /* *** navigation and header design start *** */
 
 .top-header{
